--- a/quiz.css
+++ b/quiz.css
@@ -6,13 +6,25 @@
   box-shadow: 2px 2px 2px 2px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .carOutputDiv {
-  border: 3px solid blue;
+  border: 10px solid blue;
   min-width: 100%;
   min-height: 500px;
   border-radius: 2px;
+  box-shadow: 5px 5px;
 }
 
 .fullWidth {
   width: 100%
+}
+
+.singleCar {
+  margin: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-shadow: 5px 5px;
 }
