--- a/quiz.css
+++ b/quiz.css
@@ -11,11 +11,13 @@
 }
 
 .carOutputDiv {
-  border: 10px solid blue;
+  border: 10px solid black;
   min-width: 100%;
   min-height: 500px;
   border-radius: 2px;
   box-shadow: 5px 5px;
+  display: inline-block;
+  margin: 0 auto;
 }
 
 .fullWidth {
@@ -27,4 +29,5 @@
   background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   box-shadow: 5px 5px;
+  min-height: 340px;
 }
