--- a/quiz.css
+++ b/quiz.css
@@ -31,3 +31,11 @@
   box-shadow: 5px 5px;
   min-height: 340px;
 }
+
+.styledCar {
+  margin: 10px;
+  background: rgba(255,215,0, 0.5);
+  border-radius: 5px;
+  box-shadow: 10px;
+  min-height: 340px;
+}
