--- a/quiz.css
+++ b/quiz.css
@@ -36,7 +36,6 @@
   margin: 10px;
   background: rgba(255,215,0, 0.5);
   border-radius: 5px;
-  box-shadow: 10px;
+  box-shadow: 8px 8px 8px 8px;
   min-height: 340px;
-  background: green;
 }
